crates/ink/tests/ui/trait_def/fail/definition_constructor.rs
#[ink::trait_definition]
pub trait TraitDefinition {
    #[ink(constructor)]
    fn constructor() -> Self;
}

fn main() {}
